resolve separate problems